; ModuleID = '/home/carl/AnghaBench/linux/drivers/target/iscsi/extr_iscsi_target_parameters.c_iscsi_update_param_value.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/target/iscsi/extr_iscsi_target_parameters.c_iscsi_update_param_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iscsi_param = type { i32, i32 }

@GFP_KERNEL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [38 x i8] c"Unable to allocate memory for value.\0A\00", align 1
@ENOMEM = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [34 x i8] c"iSCSI Parameter updated to %s=%s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @iscsi_update_param_value(%struct.iscsi_param* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.iscsi_param*, align 8
  %5 = alloca i8*, align 8
  store %struct.iscsi_param* %0, %struct.iscsi_param** %4, align 8
  store i8* %1, i8** %5, align 8
  %6 = load %struct.iscsi_param*, %struct.iscsi_param** %4, align 8
  %7 = getelementptr inbounds %struct.iscsi_param, %struct.iscsi_param* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @kfree(i32 %8)
  %10 = load i8*, i8** %5, align 8
  %11 = load i32, i32* @GFP_KERNEL, align 4
  %12 = call i32 @kstrdup(i8* %10, i32 %11)
  %13 = load %struct.iscsi_param*, %struct.iscsi_param** %4, align 8
  %14 = getelementptr inbounds %struct.iscsi_param, %struct.iscsi_param* %13, i32 0, i32 0
  store i32 %12, i32* %14, align 4
  %15 = load %struct.iscsi_param*, %struct.iscsi_param** %4, align 8
  %16 = getelementptr inbounds %struct.iscsi_param, %struct.iscsi_param* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %23, label %19

19:                                               ; preds = %2
  %20 = call i32 @pr_err(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0))
  %21 = load i32, i32* @ENOMEM, align 4
  %22 = sub nsw i32 0, %21
  store i32 %22, i32* %3, align 4
  br label %31

23:                                               ; preds = %2
  %24 = load %struct.iscsi_param*, %struct.iscsi_param** %4, align 8
  %25 = getelementptr inbounds %struct.iscsi_param, %struct.iscsi_param* %24, i32 0, i32 1
  %26 = load i32, i32* %25, align 4
  %27 = load %struct.iscsi_param*, %struct.iscsi_param** %4, align 8
  %28 = getelementptr inbounds %struct.iscsi_param, %struct.iscsi_param* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @pr_debug(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.1, i64 0, i64 0), i32 %26, i32 %29)
  store i32 0, i32* %3, align 4
  br label %31

31:                                               ; preds = %23, %19
  %32 = load i32, i32* %3, align 4
  ret i32 %32
}

declare dso_local i32 @kfree(i32) #1

declare dso_local i32 @kstrdup(i8*, i32) #1

declare dso_local i32 @pr_err(i8*) #1

declare dso_local i32 @pr_debug(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
